--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     justify-content: center;
     font-family: 'Outfit', sans-serif;
+    align-items: center;
 }
 
 .card {
@@ -14,7 +15,6 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 5px 10px rgba(2, 1, 1, 0.1);
-    align-items: center;
 }
  img{
     width: 100%;
@@ -28,9 +28,11 @@ body {
  h1{
     color: hsl(218, 44%, 22%);
     font-weight: 700;
+    margin-bottom: 20px;
  }
 
  p{
     color: hsl(216, 15%, 48%);
     font-weight: 400;
+    font-size: 15px;
  }
