--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     text-align: center;
  }
 
+
  h1{
     color: hsl(218, 44%, 22%);
     font-weight: 700;
@@ -36,3 +37,19 @@ body {
     font-weight: 400;
     font-size: 15px;
  }
+
+ @media (min-width: 1440px) {
+    .card {
+      width: 380px;
+      padding: 25px;
+    }
+    
+    h1 {
+      font-size: 24px;
+    }
+    
+    p {
+      font-size: 16px;
+      margin-bottom: 5px;
+    }
+  }
